# L4GuidingUtil

./: .gitignore  README.md  fiber_mask_application.py  full.py  generate_to_img.fits  improc.py  main.py  pyproject.toml  sensor_capture_sim.py  star_generation.py  sweep_offsets_6_0.5-4.0_100.npy  sweep_offsets_8_0.5-3.0_100.npy  telescope_sim.py  test_capture_img.fits  test_capture_img.toml  util.py
L4-guiding-util/: pyproject.toml  sensor_capture.py  sweep_offsets_fwhm.py  telescope_sim.py
refactor/: generate_star.py  generate_to_img.py
scripts/: apply_fiber.py  generate_star.py  generate_to_img.py  rog_req.py  sensor_capture.py  sensor_capture_inverse.py  sweep_offsets_fwhm.py
src/L4_guiding_util/: __init__.py  annotated_image.py  apply_fiber.py  rog_req.py  sensor_capture_inverse.py  telescope_sim.py
tests/: test_AnnotatedImage.py
