
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]

name = "L4-guiding-util"
description = "Utility for generating and evaluating images for L4 guiding algorithm testing"
readme = "README.md"
version = "0.0.0"
dependencies = [
    "astropy >= 6.1.6",
    "numpy >= 2.1.3",
    "matplotlib >= 3.9.2",
    "pillow >= 11.0.0",
    "scipy >= 1.14.1",
]

[project.scripts]
